# scopeforge-cli

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: COMMANDS.md  INSTALL.md  sample-report.html  sample-report.md  sample-services.csv
samples/: sample-nmap.xml
scopeforge/: cli.py  models.py  nmap_runner.py  parser.py  reporting.py  risk_engine.py  utils.py
scopeforge/templates/: report.html  report.md
tests/: test_parser.py  test_utils.py
