[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scopeforge-cli"
version = "0.1.0"
description = "Smart Nmap wrapper that stores raw evidence and generates professional reports."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Naman Parikh"}
]
keywords = ["nmap", "cybersecurity", "recon", "reporting", "linux", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: System :: Networking"
]
dependencies = [
  "rich>=13.7.0",
  "jinja2>=3.1.0"
]


[project.urls]
Homepage = "https://github.com/namanparikh11/scopeforge-cli"
Repository = "https://github.com/namanparikh11/scopeforge-cli"
Issues = "https://github.com/namanparikh11/scopeforge-cli/issues"

[project.optional-dependencies]
pdf = ["weasyprint>=62.0"]
dev = ["pytest>=8.0.0", "ruff>=0.5.0"]

[project.scripts]
sfmap = "scopeforge.cli:main"

[tool.setuptools]
packages = ["scopeforge"]
include-package-data = true

[tool.setuptools.package-data]
scopeforge = ["templates/*.html", "templates/*.md"]

[tool.ruff]
line-length = 100
